# stonks-ai

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  main.py  pyproject.toml  pytest.ini  requirements.txt
docs/: API.md  ARCHITECTURE.md  DEVELOPMENT.md  SPX_0DTE_V_DIP_STRATEGY.md
notebooks/: exploration.ipynb
pinescript/: 0dte_signals_v2.pine
scripts/: setup_dev.sh
src/: __init__.py  main.py  server.py
src/analysis/: __init__.py  indicators.py  risk.py  suggester.py
src/api/: __init__.py  signals.py  webhook.py
src/config/: __init__.py  settings.py
src/data/: __init__.py  moomoo_client.py
src/execution/: __init__.py  executor.py  order_manager.py  order_types.py  position_tracker.py
src/llm/: __init__.py  approval_advisor.py  client.py  exit_evaluator.py  schemas.py  signal_analyzer.py
src/models/: __init__.py  options.py  signals.py  suggestions.py
src/sentiment/: __init__.py
src/utils/: __init__.py  logger.py  time_utils.py
tests/: __init__.py  conftest.py
tests/unit/: test_config.py
