[project]
name = "stonks-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click>=8.3.1",
    "loguru>=0.7.3",
    "matplotlib>=3.10.7",
    "pandas>=2.3.3",
    "python-dotenv>=1.2.1",
    "rich>=14.2.0",
    "seaborn>=0.13.2",
    # 0DTE Bot dependencies
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "moomoo-api>=9.0.0",
    "pydantic>=2.10.0",
    "pytz>=2024.2",
    "yfinance>=0.2.50",
    "ta-lib>=0.6.8",
    # LLM integration
    "anthropic>=0.40.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
]
